Alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ button{
     color: white;
     width: 10em;
     height: 2em;
+    margin: 10px;
 }
 
 button:hover {
